<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wordEdition"
    style="@style/EditWord">
    <LinearLayout
        style="@style/EditWordButtonContainer">
	    <Button 
		    android:id="@+id/activate"
	    	android:text="@string/activate"
	    	style="@style/EditButton"/>
		<Button 
		    android:id="@+id/deactivate"
	    	android:text="@string/deactivate"
	    	style="@style/EditButton"/>
		<View
	  	    style="@style/EditButtonDivider"/>
		<Button 
			android:id="@+id/edit"
	    	android:text="@string/edit"
	    	style="@style/EditButton" />
		<View
	  	    style="@style/EditButtonDivider"/>
	  	<Button 
	  	    android:id="@+id/delete"
	    	android:text="@string/delete" 
	    	style="@style/EditButton"/>
    </LinearLayout>
	<TextView
	    android:id="@+id/translationsList"
		style="@style/EditWordTranslations" />
</LinearLayout>