<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/Fragment">
	<TextView 
	    android:id="@+id/addNoDictionariesMessage"
		style="@style/Message"
		android:text="@string/message_no_dictionaries_add"/>
    <ScrollView
        android:id="@+id/scrollView"
		style="@style/AddScrollView">
	    <LinearLayout
	        style="@style/AddLayout">
	        <LinearLayout
	            style="@style/AddLayoutForm">
	            <LinearLayout
	                style="@style/AddSection">
				    <TextView
				       android:id="@+id/wordTitle"
				       android:text="@string/word"
				       style="@style/AddSectionTitle"/>
				    <EditText
				        android:id="@+id/word"
				        style="@style/AddWordEditText">
				    </EditText>
			    </LinearLayout>
				<LinearLayout
	                style="@style/AddSection">
				    <TextView
				       android:id="@+id/translationsTitle"
				       android:text="@string/translations"
				       style="@style/AddSectionTitle"/>
					<LinearLayout 
					    android:id="@+id/added_translations"
					    style="@style/AddTranslationsList">
					</LinearLayout>
				    <LinearLayout 
					    style="@style/AddTranslation">
					    <EditText	
					        android:id="@+id/translation"
					        style="@style/ElementAddEditText">
					    </EditText>
					    <ImageButton
					        android:id="@+id/addTranslation"
					        android:text="@string/add" 
					       	style="@style/ElementAddButton"/>
					</LinearLayout>
				  	<Button
				       android:id="@+id/addWordWithTranslations"
				       android:text="@string/add_to_dictionary"
				       style="@style/AddToDictionaryButton"/>
				</LinearLayout>
		    </LinearLayout>
	    </LinearLayout>
    </ScrollView>
</LinearLayout>