<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	style="@style/NavigationBar">
    <LinearLayout
        style="@style/NavigationBarContainer">
		<RelativeLayout
		    android:id="@+id/navigation_tab_1"
			style="@style/NavigationBarSelector">
		    <TextView 
		        android:id="@+id/navigation_tab_selector_1_text"
		        android:text="@string/ADD"
		        style="@style/NavigationBarSelectorText"/>
		    <View 
		        android:id="@+id/navigation_tab_selector_1"
		        style="@style/NavigationBarSelectorIndicator"/>
		</RelativeLayout>
		<RelativeLayout
		    android:id="@+id/navigation_tab_2"
		    style="@style/NavigationBarSelector">
		    <TextView 
		        android:id="@+id/navigation_tab_selector_2_text"
		        style="@style/NavigationBarSelectorText"
		        android:text="@string/LIST"/>
		    <View 
		        android:id="@+id/navigation_tab_selector_2"
		     	style="@style/NavigationBarSelectorIndicator"/>
		</RelativeLayout>
		<RelativeLayout
		    android:id="@+id/navigation_tab_3"
		    style="@style/NavigationBarSelector">
		    <TextView 
		        android:id="@+id/navigation_tab_selector_3_text"
		        android:text="@string/TEST"
		        style="@style/NavigationBarSelectorText"/>
		    <View 
		        android:id="@+id/navigation_tab_selector_3"
		     	style="@style/NavigationBarSelectorIndicator"/>
		</RelativeLayout>
	</LinearLayout>
	<View 
	    style="@style/BottomLine"/>
</LinearLayout>